--- a/style.css
+++ b/style.css
@@ -97,3 +97,133 @@ header {
   height: 30px;
   gap: 23px;
 }
+.flex-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.menu-header {
+  display: flex;
+}
+form {
+  display: flex;
+}
+.header-top {
+  background-color: #312b2d;
+  color: #fff;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+.cart-btn {
+  margin-left: 4vw;
+  border: none;
+  padding-bottom: 8px;
+  padding-top: 8px;
+  padding-left: 13px;
+  padding-right: 13px;
+  border-radius: 5px;
+  color: #312b2d;
+  background-color: #fff;
+  font-size: large;
+}
+.fas {
+  color: #fff;
+  font-size: 20px;
+}
+input {
+  background-color: #312b2d;
+  border: none;
+  border-bottom: 3px solid #fff;
+  width: 200px;
+  outline: none;
+  color: #fff;
+}
+.btn-search {
+  background-color: #312b2d;
+  border: none;
+  position: absolute;
+  margin-left: 11.6%;
+  top: 35px;
+  outline: none;
+}
+main {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 100px;
+}
+.card {
+  background-color: #312b2d;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: #fff;
+  border-radius: 13px;
+  padding-bottom: 17px;
+}
+.img-product {
+  width: 200px;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+}
+.title-product {
+  margin-top: 15px;
+}
+.price-product {
+  margin-top: 10px;
+}
+.buy-btn-product {
+  background-color: #fff;
+  color: #312b2d;
+  margin-top: 10px;
+  border: none;
+  border-radius: 7px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.cart-container {
+  position: relative;
+}
+.cart-block {
+  position: absolute;
+  background-color: bisque;
+  left: -70px;
+  top: 55px;
+  color: #312b2d;
+  font-size: 20px;
+  padding-top: 10px;
+  padding-left: 10px;
+  padding-bottom: 10px;
+}
+.cart-item {
+  display: flex;
+  margin-bottom: 17px;
+}
+.cart-item:last-of-type {
+  margin-bottom: 0;
+}
+.img-cart-prod {
+  width: 80px;
+  margin-right: 15px;
+}
+.cart-item-desc {
+  width: 100px;
+  display: flex;
+  gap: 22px;
+  flex-direction: column;
+  justify-content: center;
+}
+.right-block {
+  margin-left: 10px;
+  width: 110px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+.delete-btn {
+  width: 30px;
+  font-size: 20px;
+}
